--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body class="overflow-x-hidden dark:bg-gray-800 dark:text-white">
   <canvas id="c" class="w-screen h-[70vh] relative z-10 bg-gradient-to-tr from-[hsl(180,100%,63%)] to-[hsl(180,50%,53%)] dark:from-[hsl(180,100%,83%,40%)] dark:to-[hsl(180,50%,53%,30%)]"></canvas>
-  <main class="relative z-10 w-full mx-auto max-w-5xl mb-16 mt-8 text-xl px-2">
+  <main class="relative z-10 w-screen overflow-hidden mx-auto max-w-5xl mb-16 mt-8 text-xl px-2">
     <h1 class="text-4xl mb-2 leading-10">👋 My name is Hamza, a web developer.</h1>
     <p>
       <span class="text-gray-500 dark:text-gray-300">Description:</span>
@@ -45,8 +45,7 @@
           class="peer z-20 relative whitespace-nowrap">Earth - rotating 3d earth</span><span
           class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>,
       <a class="relative" href="https://github.com/hamzakhuswan/react-access-hooks" target="_blank"
-        rel="noreferrer"><span class="peer z-20 relative whitespace-nowrap">React Access Hooks -
-          accessibility project</span><span
+        rel="noreferrer"><span class="peer z-20 relative whitespace-nowrap">React Access Hooks - accessibility</span><span
           class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>.
     </p>
     <p class="mb-6">
