⬆️ update layout & text

--- a/index.html
+++ b/index.html
@@ -4,63 +4,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hamza, a web developer.</title>
+  <title>Hamza's personal website</title>
   <link rel="stylesheet" href="./src/style.css">
   <link rel="icon" type="image/png" sizes="192x192" href="/logo192.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap" rel="stylesheet">
-  <meta name="description" content="Hamza, a web developer.">
-  <meta property="og:title" content="Hamza, a web developer.">
-  <meta property="og:description" content="Hamza, a web developer.">
+  <meta name="description" content="Hamza's personal website">
+  <meta property="og:title" content="Hamza's personal website">
+  <meta property="og:description" content="Hamza's personal website">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://hamza.se/">
   <meta property="og:image" content="https://hamza.se/preview.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Hamza, a web developer.">
-  <meta name="twitter:description" content="Hamza, a web developer.">
+  <meta name="twitter:title" content="Hamza's personal website">
+  <meta name="twitter:description" content="Hamza's personal website">
   <meta name="twitter:creator" content="author">
   <meta name="twitter:image" content="https://hamza.se/preview.jpg">
   <link rel="manifest" href="/manifest.json" />
 </head>
 
 <body class="overflow-x-hidden dark:bg-gray-800 dark:text-white">
-  <canvas id="c" class="w-screen h-[70vh] relative z-10 bg-gradient-to-tr from-[hsl(180,100%,63%)] to-[hsl(180,50%,53%)] dark:from-[hsl(180,100%,83%,40%)] dark:to-[hsl(180,50%,53%,30%)]"></canvas>
-  <main class="relative z-10 w-screen overflow-hidden mx-auto max-w-5xl mb-16 mt-8 text-xl px-2">
-    <h1 class="text-4xl mb-2 leading-10">👋 My name is Hamza, a web developer.</h1>
-    <p>
-      <span class="text-gray-500 dark:text-gray-300">Description:</span>
-      <span>web developer</span>
-    </p>
-    <p>
-      <span class="text-gray-500 dark:text-gray-300">Hobbies:</span>
-      <span>3d, computing, user interfaces...</span>
-    </p>
-    <p>
-      <span class="text-gray-500 dark:text-gray-300">Work: </span>
-      <a class="relative" href="https://hamza.se/minskin/" target="_blank" rel="noreferrer"><span
-          class="peer z-20 relative whitespace-nowrap">MinSkin - Minecraft skin tester</span><span
-          class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>,
-      <a class="relative" href="https://hamza.se/earth/" target="_blank" rel="noreferrer"><span
-          class="peer z-20 relative whitespace-nowrap">Earth - rotating 3d earth</span><span
-          class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>,
-      <a class="relative" href="https://github.com/hamzakhuswan/react-access-hooks" target="_blank"
-        rel="noreferrer"><span class="peer z-20 relative whitespace-nowrap">React Access Hooks - accessibility</span><span
-          class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>.
-    </p>
-    <p class="mb-6">
-      <span class="text-gray-500 dark:text-gray-300">Links: </span>
-      <a class="relative" href="https://github.com/hamzakhuswan/" target="_blank" rel="noreferrer"><span
-          class="peer z-20 relative">GitHub</span><span
-          class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>,
-      <a class="relative" href="https://www.upwork.com/freelancers/~01924c1277154fbaf9" target="_blank"
-        rel="noreferrer"><span class="peer z-20 relative">Upwork</span><span
-          class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>,
-      <a class="relative" href="mailto:hamzakhuswan@outlook.com" target="_blank" rel="noreferrer"><span
-          class="peer z-20 relative whitespace-nowrap">my email</span><span
-          class="absolute left-0 bottom-0 w-full h-[2px] bg-[#43CCCC] dark:bg-[#439999] peer-hover:h-full hover:h-full z-0 transition-all"></span></a>.
-    </p>
-  </main>
+  <div class="md:flex md:justify-between md:items-center md:flex-row-reverse">
+    <div class="relative z-10 w-screen h-[70vh] md:w-[600px] md:h-screen bg-gradient-to-tr from-[hsl(180,100%,63%)] to-[hsl(180,50%,53%)] dark:from-[hsl(180,50%,53%,90%)] dark:to-[hsl(180,50%,53%,90%)]">
+      <canvas id="c" class="md:max-w-[600px] w-full md:max-h-[600px] h-full md:absolute md:left-[-40%] md:bottom-[10%] bg-transparent"></canvas>
+    </div>
+    <main class="relative z-10 overflow-hidden mx-auto max-w-lg mb-16 mt-8 text-xl px-2">
+      <h1 class="text-4xl md:leading-normal mb-2 font-semibold text-gray-700 dark:text-gray-200">I am Hamza & here is my spot on the internet!</h1>    
+      <p>Nothing particularly different here; an illustration for a floating laptop, green/blue background, this text and a few links. That it.</p>
+
+      <br />
+
+      <h2 class="text-gray-500 dark:text-gray-300">Web development projects:</h2>
+      <ul class="ml-2">
+        <li>
+          <a class="relative" href="https://hamza.se/minskin/" target="_blank" rel="noreferrer"><span
+            class="peer z-20 relative whitespace-nowrap">MinSkin</span><span
+            class="link_underline"></span></a>
+            -
+            <span>Minecraft 3d skin tester</span>
+        </li>
+        <li>
+          <a class="relative" href="https://hamza.se/earth/" target="_blank" rel="noreferrer"><span
+            class="peer z-20 relative whitespace-nowrap">Earth</span><span
+            class="link_underline"></span></a>
+            -
+          <span>rotating 3d earth</span>
+        </li>
+        <li>
+          <a class="relative" href="https://github.com/hamzakhuswan/react-access-hooks" target="_blank"
+          rel="noreferrer"><span class="peer z-20 relative whitespace-nowrap">React Access Hooks</span><span
+            class="link_underline"></span></a>
+          -
+          <span>React hooks library for implementing accessible components</span>
+        </li>
+      </ul>
+  
+      <br/>
+
+      <h2 class="text-gray-500 dark:text-gray-300">Media:</h2>
+      <div class="ml-2">
+          <a class="relative" href="https://github.com/hamzakhuswan/" target="_blank" rel="noreferrer"><span
+            class="peer z-20 relative">GitHub</span><span
+            class="link_underline"></span></a>,
+          <a class="relative" href="https://www.upwork.com/freelancers/~01924c1277154fbaf9" target="_blank"
+          rel="noreferrer"><span class="peer z-20 relative">Upwork</span><span
+            class="link_underline"></span></a>,
+          <a class="relative" href="mailto:hamzakhuswan@outlook.com" target="_blank" rel="noreferrer"><span
+            class="peer z-20 relative whitespace-nowrap">my email</span><span
+            class="link_underline"></span></a>
+      </div>
+    </main>
+  </div>
+  
   <script type="module" src="/src/main.ts"></script>
 </body>
 
