🖇️ change/add links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <span>rotating 3d earth</span>
         </li>
         <li>
-          <a class="relative" href="https://github.com/hamzakhuswan/react-access-hooks" target="_blank"
+          <a class="relative" href="https://github.com/hamza512b/react-access-hooks" target="_blank"
           rel="noreferrer"><span class="peer z-20 relative whitespace-nowrap">React Access Hooks</span><span
             class="link_underline"></span></a>
           -
@@ -64,15 +64,18 @@
 
       <h2 class="text-gray-500 dark:text-gray-300">Media:</h2>
       <div class="ml-2">
-          <a class="relative" href="https://github.com/hamzakhuswan/" target="_blank" rel="noreferrer"><span
+          <a class="relative" href="https://github.com/hamza512b/" target="_blank" rel="noreferrer"><span
             class="peer z-20 relative">GitHub</span><span
             class="link_underline"></span></a>,
-          <a class="relative" href="https://www.upwork.com/freelancers/~01924c1277154fbaf9" target="_blank"
-          rel="noreferrer"><span class="peer z-20 relative">Upwork</span><span
+          <a class="relative" href="https://twitter.com/hamza512b" target="_blank" rel="noreferrer"><span
+            class="peer z-20 relative whitespace-nowrap">Twitter</span><span
             class="link_underline"></span></a>,
+          <a class="relative" href="https://www.upwork.com/freelancers/~01924c1277154fbaf9" target="_blank"
+            rel="noreferrer"><span class="peer z-20 relative">Upwork</span><span
+              class="link_underline"></span></a>,
           <a class="relative" href="mailto:hamzakhuswan@outlook.com" target="_blank" rel="noreferrer"><span
             class="peer z-20 relative whitespace-nowrap">my email</span><span
-            class="link_underline"></span></a>
+            class="link_underline"></span></a>.
       </div>
     </main>
   </div>
